@@ -153,6 +153,11 @@ typedef NS_ENUM(NSUInteger, AbstractPostRemoteStatus) {
 - (BOOL)isDraft;
 
 /**
+ Returns YES if the post is a published.
+ */
+- (BOOL)isPublished;
+
+/**
  Returns YES if the original post is a draft
  */
 - (BOOL)originalIsDraft;
